更新 2019年3月6日

--- a/source/_posts/2019-03-06-’最高法卷宗丢失案‘大反转-疑问重重.md
+++ b/source/_posts/2019-03-06-’最高法卷宗丢失案‘大反转-疑问重重.md
@@ -1,7 +1,7 @@
 ---
 title: “最高法卷宗丢失案”大反转 疑问重重
 date: 2019-02-24 23:46:02
-tags:
+tags: [崔永元]
 ---
 “陕西千亿元矿权案”卷宗在最高法院离奇丢失的丑闻日前发生大逆转。周五（2月22日），中共政法委牵头的联合调查组称，卷宗失踪“系举报这一大案的王林清所为”“涉嫌犯罪”，王林清当晚被“央视认罪”，引发中国民众爆炸式的反弹。
 
