--- a/source/_posts/2019-03-06-人权研究员：加拿大华人为啥不肯公开发声.md
+++ b/source/_posts/2019-03-06-人权研究员：加拿大华人为啥不肯公开发声.md
@@ -1,7 +1,7 @@
 ---
 title: 人权研究员：加拿大华人为啥不肯公开发声
 date: 2019-02-26 21:04:23
-tags:
+tags: [人权]
 ---
 
 ![一些来到加拿大的华人由于恐惧中共，不敢自由发表意见和看法。图为多伦多唐人街](https://i.loli.net/2019/02/26/5c753941647b8.jpg)
