--- a/source/_posts/2019-03-06-何为中美争论的结构性改革.md
+++ b/source/_posts/2019-03-06-何为中美争论的结构性改革.md
@@ -1,7 +1,7 @@
 ---
 title: 何为中美争论的“结构性改革”
 date: 2019-03-02 11:38:34
-tags:
+tags: [经济]
 ---
 
 全球聚焦的美中贸易谈判，亦将中国“结构性改革”推到媒体聚光灯下，尤其是后者已成为美中贸易冲突能否休战的关键。结构性改革为何成为美中角力的焦点？若真获推行，又会给中国人和中共政权带来什么样的变化？
