--- a/source/_posts/2019-03-06-向松祚演讲整理稿：中国经济40年未有之大变局.md
+++ b/source/_posts/2019-03-06-向松祚演讲整理稿：中国经济40年未有之大变局.md
@@ -1,7 +1,7 @@
 ---
 title: 向松祚演讲整理稿：中国经济40年未有之大变局
 date: 2019-02-26 00:18:28
-tags: [中国经济]
+tags: [经济]
 ---
 
 著名经济学家、国际金融战略专家向松祚发表演讲，并从宏观经济角度对2018年经济进行了分析，其观点针砭时弊，一针见血。今日特刊发向松祚的震撼演讲实录，以飨读者。
