--- a/source/_posts/2019-03-06-大陆个人养老账户为空帐-养老金支付现危机.md
+++ b/source/_posts/2019-03-06-大陆个人养老账户为空帐-养老金支付现危机.md
@@ -1,7 +1,7 @@
 ---
 title: 大陆个人养老账户为空帐 养老金支付现危机
 date: 2019-02-25 22:52:05
-tags: [养老金,双轨制]
+tags: [社会]
 ---
 ![大陆养老金寅吃卯粮，造成职工个人账户为空帐，养老金权益债务实际上处于隐性负债状态。图为南京街头的老人。](https://i.loli.net/2019/02/25/5c740fa3c4145.jpg)
 <center><font color=orange>大陆养老金寅吃卯粮，造成职工个人账户为空帐，养老金权益债务实际上处于隐性负债状态。图为南京街头的老人</font></center>
