--- a/source/_posts/2019-03-06-对农民文革式洗脑-中共推大喇叭工程.md
+++ b/source/_posts/2019-03-06-对农民文革式洗脑-中共推大喇叭工程.md
@@ -1,7 +1,7 @@
 ---
 title: 对农民文革式洗脑 中共推“大喇叭工程”
 date: 2019-02-26 20:33:53
-tags:
+tags: [文革]
 ---
 ![中共再度推行文革时期的广播系统，向广大村民反复不停地灌输无神论思想及共产党歌曲。图为河北秦皇岛一个村里的工作人员正在安装大喇叭。](https://i.loli.net/2019/02/26/5c75327b842fd.jpg)
 <center><font color=orange>中共再度推行文革时期的广播系统，向广大村民反复不停地灌输无神论思想及共产党歌曲。图为河北秦皇岛一个村里的工作人员正在安装大喇叭。</font></center>
