--- a/source/_posts/2019-03-06-王林清千亿矿权案卷宗丢失事件与调查结果.md
+++ b/source/_posts/2019-03-06-王林清千亿矿权案卷宗丢失事件与调查结果.md
@@ -1,7 +1,7 @@
 ---
 title: 王林清千亿矿权案卷宗丢失事件与调查结果
 date: 2019-02-25 23:31:50
-tags: [法制化]
+tags: [法制,崔永元]
 ---
 ![](https://i.loli.net/2019/02/25/5c740fa3be8e9.jpg)
 
