--- a/source/_posts/2019-03-06-美媒曝中国企业家阶层对未来失去信心.md
+++ b/source/_posts/2019-03-06-美媒曝中国企业家阶层对未来失去信心.md
@@ -1,7 +1,7 @@
 ---
 title: 美媒曝中国企业家阶层对未来失去信心
 date: 2019-02-26 00:04:59
-tags: [中国经济]
+tags: [经济]
 ---
 
 ![美媒说，中共对世界第二大经济体管理失当，中国企业家阶层正对未来丧失信心。图为广州市](https://i.loli.net/2019/02/26/5c74126fca6a9.jpg)
