--- a/source/_posts/2019-03-06-马杜罗军队23日攻击平民-导致至少两死.md
+++ b/source/_posts/2019-03-06-马杜罗军队23日攻击平民-导致至少两死.md
@@ -1,7 +1,7 @@
 ---
 title: 马杜罗军队23日攻击平民 导致至少两死2
 date: 2019-02-24 23:46:02
-tags:
+tags: [委内瑞拉]
 ---
 
 ![周六（2月23日），委内瑞拉有争议的总统尼古拉斯‧马杜罗（Nicolas Maduro）的军队和装甲车，在委国与哥伦比亚及巴西的边境，以催泪瓦斯和橡胶子弹攻击保护人道主义援助物资进入委国的平民，造成至少两人遇难。 (LUIS ROBAYO/AFP/Getty Images)](http://i.epochtimes.com/assets/uploads/2019/02/GettyImages-1126954829-600x400.jpg)
