--- a/source/_posts/2019-03-06-中美贸易谈判：美国助推的结构性改革会给中国带来什么.md
+++ b/source/_posts/2019-03-06-中美贸易谈判：美国助推的结构性改革会给中国带来什么.md
@@ -1,7 +1,7 @@
 ---
 title: 中美贸易谈判：美国助推的结构性改革会给中国带来什么
 date: 2019-03-06 01:25:48
-tags:
+tags: [贸易战]
 ---
 ![](https://i.loli.net/2019/03/06/5c7eb13c67134.jpg)
 
